2006-01-29  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot.cc (create): Add support for "file" type
	chroots.

	* schroot/setup/05file: Split file type checking and unpacking
	into shell functions.

	* schroot/run/00check: Add support for file chroots.

	* schroot/setup/00check: Add support for file chroots.

	* schroot/setup/Makefile.am (setup_SCRIPTS): Add 05file.

	* schroot/schroot.1.in: Update help options.

2006-01-29  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-util.cc (find_program_in_path): Return the
	program name without the absolute prefix.

	* schroot/sbuild-session.cc (run_child): Don't prefix the program
	search path (find_program_in_path), because it's already running
	inside the chroot.

	* schroot/Makefile.am (DEFS): Remove G_LOG_DOMAIN.

	* schroot/schroot-options.cc: Remove debugging messages.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* debian/rules: Don't run the testsuite.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-options.cc: Store positional arguments correctly
	using positional_options_description.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* debian/rules: Don't run the testsuite, due to it requiring root,
	or fake root, privileges.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Update for 0.2.0.

	* debian/control: Suggest unzip.

	* NEWS: Update for 0.2.0.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* po/en_GB.po: Updated British English translation.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Remove check for stdbool.h.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot.h: setup_session_info is protected and
	virtual.

	* test/Makefile.am: Distribute test data.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* schroot/setup/05file: Filetype checks are now quiet.

2006-01-28  Roger Leigh  <rleigh@debian.org>

	* Update documentation.

	* schroot/setup/10mount: Add special cases for file chroots.
