@@ -48,6 +48,7 @@ libtest_la_LIBADD = ../schroot/libsbuild.la $(CPPUNIT_LIBS)
 sbuild_chroot_SOURCES = 		\
 	sbuild-chroot.cc		\
 	sbuild-chroot-plain.cc		\
+	sbuild-chroot-file.cc		\
 	sbuild-chroot-block-device.cc	\
 	sbuild-chroot-lvm-snapshot.cc	\
 	test-sbuild-chroot.h
